update image sizes on homepage to render on firefox correctly

--- a/src/assets/css/home.css
+++ b/src/assets/css/home.css
@@ -125,6 +125,7 @@
   }
   .homeWrapper img {
     height: 400px;
+    width: 400px;
   }
   .homeBioBlack,
   .homeBioGrey {
